# school_data_scraper

./: README.md  output_khda.csv  output_spea.csv  pyproject.toml  vhs.tape
scraper/: __init__.py  __main__.py  common.py  khda.py  spea.py
